Fixed a bug in TouchActionFilter for unidirectional touch-actions.

This CL simplifies the touch-action filtering code and fixes a crack
introduced through unidirectional touch action support. Touch-actions
left/right/up/down should never allow opposite exact diagonal swipes
even though still allowing diagonals towards the touch-action direction
as before.

BUG=697102

Review-Url: https://codereview.chromium.org/2753533002
Cr-Commit-Position: refs/heads/master@{#457133}

Former-commit-id: 4d73d6ea6360a1a74625a2f9ac3a0eab8ef3cfb2